--- a/sass/app.scss
+++ b/sass/app.scss
@@ -17,7 +17,9 @@
 // Use this grid if you want to start using the new Foundation 5 grid early.
 // It will change breakpoints to min-width: 640px and 1024px.
 //
-// @import "foundation/components/grid-5";
+@import "foundation/components/grid-5";
+
+@import "screen";
 //
 
 // @import "foundation/components/visibility";
@@ -53,4 +55,3 @@
 // @import "foundation/components/thumbs";
 // @import "foundation/components/tooltips";
 // @import "foundation/components/dropdown";
-
