--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -8062,164 +8062,232 @@ body {
   padding: 0 0 0 1.875em;
 }
 /* line 15, ../sass/_screen.scss */
-#wrapper #logo {
+#wrapper #logo a {
   text-indent: -9999px;
   background: url("../images/logo.png") no-repeat center center;
-  height: 196px;
-  width: 291px;
+  height: 190px;
+  width: 238px;
+  display: block;
+  background-size: 100%;
 }
-/* line 21, ../sass/_screen.scss */
+/* line 23, ../sass/_screen.scss */
 #wrapper .top {
   position: fixed;
   bottom: 25px;
-  left: 15%;
+  left: 25%;
+  text-indent: -9999px;
+  background: rgba(36, 39, 41, 0.3) url("../images/top.png") no-repeat center center;
+  height: 35px;
+  width: 35px;
+  z-index: 30000;
+  display: none;
 }
-/* line 26, ../sass/_screen.scss */
+/* line 34, ../sass/_screen.scss */
 #wrapper nav {
-  margin-top: 10em;
+  margin-top: 4.5em;
 }
-/* line 28, ../sass/_screen.scss */
+/* line 36, ../sass/_screen.scss */
 #wrapper nav a {
   display: block;
   color: #4e5051;
   font-weight: bold;
-  font-size: 1.75em;
-  line-height: 1.3em;
+  font-size: 1.5em;
+  line-height: 1.6em;
+}
+/* line 42, ../sass/_screen.scss */
+#wrapper nav a:hover, #wrapper nav a.active {
+  color: #fff;
 }
 
-/* line 38, ../sass/_screen.scss */
+/* line 49, ../sass/_screen.scss */
 p {
   font-weight: 300;
 }
 
-/* line 42, ../sass/_screen.scss */
+/* line 53, ../sass/_screen.scss */
 a:hover {
   color: #fff;
 }
 
-/* line 46, ../sass/_screen.scss */
+/* line 57, ../sass/_screen.scss */
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Noto Sans', Helvetica, sans-serif;
   color: #4e5051;
 }
 
-/* line 51, ../sass/_screen.scss */
+/* line 62, ../sass/_screen.scss */
 h2 {
   color: #fff;
   font-size: 3.375em;
   line-height: 1.125em;
-  margin-top: 2.125em;
+  margin-top: 1.125em;
 }
 
-/* line 58, ../sass/_screen.scss */
+/* line 69, ../sass/_screen.scss */
 h3 {
   font-size: 1.9375em;
   line-height: 1.1em;
   margin-top: 1.5em;
+  float: left;
+  width: 100%;
 }
-/* line 62, ../sass/_screen.scss */
+/* line 75, ../sass/_screen.scss */
 h3 .sup {
   font-size: 0.6em;
   line-height: 0.3em;
 }
 
-/* line 68, ../sass/_screen.scss */
+/* line 81, ../sass/_screen.scss */
+h4 {
+  color: #fff;
+  margin-bottom: 0;
+  font-size: 1.25em;
+}
+
+/* line 87, ../sass/_screen.scss */
 h5 {
   text-align: right;
   font-size: 1em;
 }
 
-/* line 73, ../sass/_screen.scss */
+/* line 92, ../sass/_screen.scss */
 h6 {
   font-size: 0.875em;
 }
 
-/* line 77, ../sass/_screen.scss */
+/* line 96, ../sass/_screen.scss */
 ul, ol {
-  margin-left: 1.2em;
+  margin-left: 1.5em;
 }
 
-/* line 81, ../sass/_screen.scss */
+/* line 101, ../sass/_screen.scss */
+ol li {
+  font-weight: bold;
+}
+/* line 103, ../sass/_screen.scss */
+ol li span {
+  font-weight: 300;
+}
+
+/* line 109, ../sass/_screen.scss */
 .row {
   margin-left: 0;
   padding: 4.375em 0;
 }
-/* line 84, ../sass/_screen.scss */
+/* line 112, ../sass/_screen.scss */
 .row#index {
-  padding-top: 8.375em;
+  padding-top: 3.375em;
 }
-/* line 86, ../sass/_screen.scss */
+/* line 114, ../sass/_screen.scss */
+.row#index h3 {
+  font-size: 1.5em;
+  margin-top: 0.3em;
+  color: #414344;
+}
+/* line 119, ../sass/_screen.scss */
+.row#index p {
+  font-size: 0.9em;
+  line-height: 1.5em;
+}
+/* line 123, ../sass/_screen.scss */
 .row#index .boxes {
   list-style: none;
   margin-left: 0;
 }
-/* line 89, ../sass/_screen.scss */
+/* line 126, ../sass/_screen.scss */
 .row#index .boxes li {
   width: 24%;
   float: left;
   margin-right: 1%;
   background: rgba(36, 39, 41, 0.3);
-  padding: 0.8125em;
+  padding: 0.8125em 0.5em;
+  position: relative;
 }
-/* line 95, ../sass/_screen.scss */
+/* line 133, ../sass/_screen.scss */
+.row#index .boxes li a {
+  display: block;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 2000;
+}
+/* line 141, ../sass/_screen.scss */
+.row#index .boxes li a:hover + span {
+  opacity: 1;
+  color: #fff;
+}
+/* line 145, ../sass/_screen.scss */
+.row#index .boxes li a:hover ~ h3 {
+  opacity: 1;
+  color: #fff;
+}
+/* line 149, ../sass/_screen.scss */
+.row#index .boxes li a:hover ~ p {
+  opacity: 1;
+  color: #fff;
+}
+/* line 154, ../sass/_screen.scss */
 .row#index .boxes li span {
   height: 34px;
   width: 100%;
   display: block;
   opacity: 0.35;
 }
-/* line 100, ../sass/_screen.scss */
+/* line 159, ../sass/_screen.scss */
 .row#index .boxes li span.lightbulb {
   background: url(../images/light-bulb.png) no-repeat center center;
 }
-/* line 103, ../sass/_screen.scss */
+/* line 162, ../sass/_screen.scss */
 .row#index .boxes li span.book {
   background: url(../images/book.png) no-repeat center center;
 }
-/* line 106, ../sass/_screen.scss */
+/* line 165, ../sass/_screen.scss */
 .row#index .boxes li span.roi {
   background: url(../images/roi.png) no-repeat center center;
   background-size: auto 90%;
 }
-/* line 110, ../sass/_screen.scss */
+/* line 169, ../sass/_screen.scss */
 .row#index .boxes li span.envelope {
   background: url(../images/mail.png) no-repeat center center;
 }
-/* line 113, ../sass/_screen.scss */
+/* line 172, ../sass/_screen.scss */
 .row#index .boxes li span.sup {
   display: inline;
   opacity: 1;
 }
-/* line 118, ../sass/_screen.scss */
+/* line 177, ../sass/_screen.scss */
 .row#index .boxes li h3 {
-  margin-top: 0;
+  margin-top: 0.25em;
 }
-/* line 121, ../sass/_screen.scss */
+/* line 180, ../sass/_screen.scss */
 .row#index .boxes li h3, .row#index .boxes li p {
   color: #4e5051;
-  margin-bottom: 5px;
+  margin-bottom: 0px;
   text-align: center;
 }
-/* line 126, ../sass/_screen.scss */
+/* line 185, ../sass/_screen.scss */
 .row#index .boxes li p {
-  font-size: 0.75em;
+  font-size: 0.875em;
 }
 
-/* line 134, ../sass/_screen.scss */
+/* line 193, ../sass/_screen.scss */
 .fixed {
   position: fixed;
   height: 100%;
-  padding: 5.625em 0 0 1.875em;
+  padding: 2.75em 0 0 1.875em;
+  z-index: 20000;
 }
 
-/* line 140, ../sass/_screen.scss */
+/* line 200, ../sass/_screen.scss */
 .sup {
   vertical-align: super;
   font-size: 0.75em;
   line-height: 0.2em;
 }
 
-/* line 146, ../sass/_screen.scss */
+/* line 206, ../sass/_screen.scss */
 .source {
   text-align: right;
   float: right;
@@ -8227,9 +8295,10 @@ ul, ol {
   font-family: 'Noto Sans', Helvetica, sans-serif;
   color: #4e5051;
   width: 100%;
+  font-weight: normal;
 }
 
-/* line 155, ../sass/_screen.scss */
+/* line 216, ../sass/_screen.scss */
 table {
   width: 100%;
   border-spacing: 3px 3px;
@@ -8237,21 +8306,26 @@ table {
   border: none;
   background: transparent;
 }
-/* line 161, ../sass/_screen.scss */
+/* line 222, ../sass/_screen.scss */
 table tr.even, table tr.alt, table tr:nth-of-type(even) {
   background: transparent;
 }
-/* line 165, ../sass/_screen.scss */
+/* line 226, ../sass/_screen.scss */
 table tr td {
   color: #fff;
   background: rgba(36, 39, 41, 0.3);
   padding: 1em 0.625em;
+  line-height: 1.5em !important;
 }
-/* line 169, ../sass/_screen.scss */
+/* line 231, ../sass/_screen.scss */
+table tr td ul {
+  margin-bottom: 0;
+}
+/* line 234, ../sass/_screen.scss */
 table tr td.center {
   text-align: center;
 }
-/* line 172, ../sass/_screen.scss */
+/* line 237, ../sass/_screen.scss */
 table tr td strong {
   text-align: center;
   width: 100%;
@@ -8260,75 +8334,84 @@ table tr td strong {
   line-height: 0.5em;
   padding-bottom: 5px;
 }
+/* line 244, ../sass/_screen.scss */
+table tr td strong.minus {
+  font-size: 3em;
+}
 
-/* line 190, ../sass/_screen.scss */
+/* line 258, ../sass/_screen.scss */
 .content {
   padding: 2.1875em 0 2.5em 0;
   overflow: hidden;
   float: left;
   width: 100%;
 }
-/* line 195, ../sass/_screen.scss */
+/* line 263, ../sass/_screen.scss */
 .content img {
   width: 100%;
 }
-/* line 197, ../sass/_screen.scss */
+/* line 265, ../sass/_screen.scss */
 .content img.venn {
-  width: 18em;
+  width: 12em;
   margin: 0 auto;
   display: block;
 }
-/* line 203, ../sass/_screen.scss */
+/* line 271, ../sass/_screen.scss */
 .content ul.pasos {
   list-style: none;
   margin: 0;
-  padding: 0 0 0 1em;
+  padding: 0;
   float: left;
   width: 100%;
 }
-/* line 209, ../sass/_screen.scss */
+/* line 277, ../sass/_screen.scss */
 .content ul.pasos li {
   float: left;
-  width: 21%;
-  padding: 1.5em 0 1.5em 0.7125em;
+  width: 22%;
+  padding: 2em 0 1.5em 1.5em;
 }
-/* line 213, ../sass/_screen.scss */
+/* line 281, ../sass/_screen.scss */
 .content ul.pasos li span {
   font-size: 0.75em;
   line-height: 1.4em;
   display: block;
 }
-/* line 218, ../sass/_screen.scss */
+/* line 286, ../sass/_screen.scss */
 .content ul.pasos li.item-1 {
   background: url(../images/paso-1.png) no-repeat top left;
+  background-size: 100%;
 }
-/* line 221, ../sass/_screen.scss */
+/* line 290, ../sass/_screen.scss */
 .content ul.pasos li.item-2 {
   background: url(../images/paso-2.png) no-repeat top left;
   margin-left: -2.7em;
   padding-left: 4em;
-  width: 28%;
+  width: 29%;
+  background-size: 100%;
 }
-/* line 227, ../sass/_screen.scss */
+/* line 297, ../sass/_screen.scss */
 .content ul.pasos li.item-3 {
   background: url(../images/paso-3.png) no-repeat top left;
-  width: 39%;
+  width: 42%;
   margin-left: -3em;
   padding-left: 4.4em;
+  background-size: 100% 100%;
 }
-/* line 233, ../sass/_screen.scss */
+/* line 304, ../sass/_screen.scss */
 .content ul.pasos li.item-4 {
   background: url(../images/paso-4.png) no-repeat top left;
-  margin-left: -3.5em;
-  width: 30%;
-  padding-left: 5.1em;
+  margin-left: -3.9em;
+  width: 31%;
+  padding-left: 5.4em;
+  background-size: 100%;
 }
 
-/* line 243, ../sass/_screen.scss */
+/* line 315, ../sass/_screen.scss */
 footer {
-  padding: 0 0 1.5em 0 !important;
+  padding: 1em 0 1.5em 0 !important;
+  border-top: 1px solid rgba(78, 80, 81, 0.8);
 }
-/* line 245, ../sass/_screen.scss */
+/* line 318, ../sass/_screen.scss */
 footer p {
   margin: 0;
   font-family: 'Noto Sans', Helvetica, sans-serif;
@@ -8336,55 +8419,118 @@ footer p {
   font-size: 0.75em;
   color: #4e5051;
 }
-
-/* line 254, ../sass/_screen.scss */
-input[type="text"], textarea {
-  background: #242729;
-  border: none;
+/* line 324, ../sass/_screen.scss */
+footer p a {
   color: #4e5051;
+}
+/* line 328, ../sass/_screen.scss */
+footer .social {
+  padding-right: 0;
+}
+/* line 330, ../sass/_screen.scss */
+footer .social a {
+  display: block;
+  height: 22px;
+  width: 20px;
+  background: url(../images/social.png) no-repeat left top;
+  float: right;
+  margin-left: 12px;
+  background-position: 0 -25px;
+}
+/* line 338, ../sass/_screen.scss */
+footer .social a:hover {
+  background-position: 0 0;
+}
+/* line 341, ../sass/_screen.scss */
+footer .social a.li {
+  background-position: -40px -25px;
+}
+/* line 343, ../sass/_screen.scss */
+footer .social a.li:hover {
+  background-position: -40px 0;
+}
+/* line 347, ../sass/_screen.scss */
+footer .social a.vi {
+  background-position: -80px -25px;
+}
+/* line 349, ../sass/_screen.scss */
+footer .social a.vi:hover {
+  background-position: -80px 0;
+}
+/* line 353, ../sass/_screen.scss */
+footer .social a.fb {
+  background-position: -115px -25px;
+}
+/* line 355, ../sass/_screen.scss */
+footer .social a.fb:hover {
+  background-position: -115px 0;
+}
+
+/* line 365, ../sass/_screen.scss */
+form .large-6:first-of-type {
+  padding-left: 0;
+}
+/* line 368, ../sass/_screen.scss */
+form .large-6:nth-of-type(2) {
+  padding-right: 0;
+}
+
+/* line 374, ../sass/_screen.scss */
+input[type="text"]:focus, input[type="password"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="month"]:focus, input[type="week"]:focus, input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="time"]:focus, input[type="url"]:focus, textarea:focus {
+  color: #fff;
+  background: rgba(36, 39, 41, 0.3);
+  box-shadow: none;
+  border: 1px solid #4e5051;
+}
+
+/* line 381, ../sass/_screen.scss */
+input[type="text"], textarea {
+  background: rgba(36, 39, 41, 0.3);
+  border: none;
+  color: #fff;
   font-size: 1.25em;
   font-weight: 300;
 }
 
-/* line 262, ../sass/_screen.scss */
+/* line 389, ../sass/_screen.scss */
 input[type="button"] {
   float: right;
   width: 50%;
-  background: #242729;
+  background: rgba(36, 39, 41, 0.3);
   border: none;
-  color: #fff;
+  color: rgba(255, 255, 255, 0.6);
   line-height: 2em;
   font-weight: 300;
   font-size: 1.3em;
   font-family: 'Noto Sans', Helvetica, sans-serif;
 }
 
-/* line 274, ../sass/_screen.scss */
+/* line 401, ../sass/_screen.scss */
 textarea {
   height: 180px;
 }
 
-/* line 278, ../sass/_screen.scss */
+/* line 405, ../sass/_screen.scss */
 ::-webkit-input-placeholder {
   color: #4e5051;
   font-weight: 300;
 }
 
-/* line 283, ../sass/_screen.scss */
+/* line 410, ../sass/_screen.scss */
 :-moz-placeholder {
   /* Firefox 18- */
   color: #4e5051;
   font-weight: 300;
 }
 
-/* line 288, ../sass/_screen.scss */
+/* line 415, ../sass/_screen.scss */
 ::-moz-placeholder {
   /* Firefox 19+ */
   color: #4e5051;
   font-weight: 300;
 }
 
-/* line 293, ../sass/_screen.scss */
+/* line 420, ../sass/_screen.scss */
 :-ms-input-placeholder {
   color: #4e5051;
   font-weight: 300;
